--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ h6 {
 p {
     margin: 0;
     padding: 0;
-    font-size: 15px;
+    font-size: 17px;
     letter-spacing: 1px;
     line-height: 1.9;
     color: rgb(0, 0, 0);
@@ -2267,4 +2267,8 @@ text-align: left;    /* text-align: left; */
 
 .sign:hover .hid {
     display: inline;
+}
+
+.modal-body ul>li {
+    margin-left: 20px;
 }
