--- a/css/style.css
+++ b/css/style.css
@@ -1064,7 +1064,7 @@ a.butn-w3pvt {
 }
 
 .services-w3ls {
-    background: url(../images/bg2.jpg) no-repeat center fixed;
+    background: url(../images/2023_2.png) no-repeat center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
